added icons to supported controls list

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -78,7 +78,11 @@
                     <div class="col-xs-12 col-sm-12">
                         <p>
                             <span style="font-size:18px">
-                                Only controls currently implemented as Aurelia components have active links
+                                <img src="src/images/green.png">
+                                Implemented controls
+                                &nbsp; &nbsp;
+                                <img src="src/images/orange.png">
+                                controls under development
                             </span>
                         </p>
                         <br>
@@ -89,104 +93,118 @@
                 <!-- Second tab page content - five columns -->
                 <div class="row">
                     <div class="col-xs-12 col-sm-2">
-                        MOST POPULAR                          <br>
-                        <a href="#">Grid</a>                  <br>
-                        <a href="#">Editor</a>                <br>
-                        <a href="#">Scheduler</a>             <br>
-                        <a href="#">Bar Charts</a>            <br>
-                        <a href="#">Line Charts</a>           <br>
-                        <a href="#">Stock Charts</a>          <br>
-                        <a href="#">DropDownList</a>          <br>
-                        <a href="#">Window</a>                <br>
-                        <a href="#">Upload</a>                <br>
-                        <a href="#">TreeView</a>              <br>
+                        MOST POPULAR                                      <br>
+                        <img src="src/images/orange.png">
+                        <a href="#/grid">Grid</a>                         <br>
+                        <a href="#">Editor</a>                            <br>
+                        <a href="#">Scheduler</a>                         <br>
+                        <a href="#">Bar Charts</a>                        <br>
+                        <a href="#">Line Charts</a>                       <br>
+                        <a href="#">Stock Charts</a>                      <br>
+                        <img src="src/images/orange.png">
+                        <a href="#/dropdownlist">DropDownList</a>         <br>
+                        <a href="#">Window</a>                            <br>
+                        <a href="#">Upload</a>                            <br>
+                        <a href="#">TreeView</a>                          <br>
                     </div>
 
                    <div class="col-xs-12 col-sm-2">
-                        DATA MANAGEMENT                       <br>
-                        <a href="#">Grid</a>                  <br>
-                        <a href="#">Spreadsheet</a>           <br>
-                        <a href="#">Listview</a>              <br>
-                        <a href="#">Pivot Grid</a>            <br>
-                        <a href="#">TreeList</a>              <br>
-                        <a href="#">ScrollView</a>            <br>
+                        DATA MANAGEMENT                                   <br>
+                        <img src="src/images/orange.png">
+                        <a href="#/grid">Grid</a>                         <br>
+                        <a href="#">Spreadsheet</a>                       <br>
+                        <a href="#">Listview</a>                          <br>
+                        <a href="#">Pivot Grid</a>                        <br>
+                        <a href="#">TreeList</a>                          <br>
+                        <a href="#">ScrollView</a>                        <br>
                         <br>
-                        EDITORS                               <br>
-                        <a href.bind="src/autcomplete/index">Autocomplete</a>          <br>
-                        <a href="#">ColorPicker</a>           <br>
-                        <a href="#">Combobox</a>              <br>
-                        <a href="#">DatePicker</a>            <br>
-                        <a href="#">DateTimePicker</a>        <br>
-                        <a href="#">DropDownList</a>          <br>
-                        <a href="#">Editor</a>                <br>
-                        <a href="#">MaskedTextBox</a>         <br>
-                        <a href="#">MultiSelect</a>           <br>
-                        <a href="#">Numeric TextBox</a>       <br>
-                        <a href="#">Slider</a>                <br>
-                        <a href="#">TimePicker</a>            <br>
-                        <a href="#">Upload</a>                <br>
-                        <a href="#">Switch</a>                <br>
+                        EDITORS                                           <br>
+                        <img src="src/images/green.png">
+                        <a href="#/autocomplete">Autocomplete</a>         <br>
+                        <a href="#">ColorPicker</a>                       <br>
+                        <img src="src/images/orange.png">
+                        <a href="#combobox">Combobox</a>                  <br>
+                        <a href="#">DatePicker</a>                        <br>
+                        <a href="#">DateTimePicker</a>                    <br>
+                        <img src="src/images/orange.png">
+                        <a href="#/dropdownlist">DropDownList</a>         <br>
+                        <a href="#">Editor</a>                            <br>
+                        <a href="#">MaskedTextBox</a>                     <br>
+                        <a href="#">MultiSelect</a>                       <br>
+                        <a href="#">Numeric TextBox</a>                   <br>
+                        <a href="#">Slider</a>                            <br>
+                        <a href="#">TimePicker</a>                        <br>
+                        <a href="#">Upload</a>                            <br>
+                        <a href="#">Switch</a>                            <br>
                    </div>
 
                    <div class="col-xs-12 col-sm-2">
-                        CHARTS                                <br>
-                       <a href="#">Area Charts</a>            <br>
-                       <a href="#">Bar Charts</a>             <br>
-                       <a href="#">Box Plot Charts</a>        <br>
-                       <a href="#">Bubble Charts</a>          <br>
-                       <a href="#">Bullet Charts</a>          <br>
-                       <a href="#">Donut Charts</a>           <br>
-                       <a href="#">Funnel Charts</a>          <br>
-                       <a href="#">Line Charts</a>            <br>
-                       <a href="#">Pie Charts</a>             <br>
-                       <a href="#">Polar Charts</a>           <br>
-                       <a href="#">Radar Charts</a>           <br>
-                       <a href="#">Range Bar Charts</a>       <br>
-                       <a href="#">Scatter Charts</a>         <br>
-                       <a href="#">Sparklines</a>             <br>
-                       <a href="#">Stock Charts</a>           <br>
-                       <a href="#">TreeMap</a>                <br>
-                       <a href="#">Waterfall Charts</a>       <br>
+                        CHARTS                                            <br>
+                       <a href="#">Area Charts</a>                        <br>
+                       <a href="#">Bar Charts</a>                         <br>
+                       <a href="#">Box Plot Charts</a>                    <br>
+                       <a href="#">Bubble Charts</a>                      <br>
+                       <a href="#">Bullet Charts</a>                      <br>
+                       <a href="#">Donut Charts</a>                       <br>
+                       <a href="#">Funnel Charts</a>                      <br>
+                       <a href="#">Line Charts</a>                        <br>
+                       <a href="#">Pie Charts</a>                         <br>
+                       <a href="#">Polar Charts</a>                       <br>
+                       <a href="#">Radar Charts</a>                       <br>
+                       <a href="#">Range Bar Charts</a>                   <br>
+                       <a href="#">Scatter Charts</a>                     <br>
+                       <a href="#">Sparklines</a>                         <br>
+                       <a href="#">Stock Charts</a>                       <br>
+                       <a href="#">TreeMap</a>                            <br>
+                       <a href="#">Waterfall Charts</a>                   <br>
                        <br>
-                       GAUGES                                 <br>
-                       <a href="#">Linear Gauge</a>           <br>
-                       <a href="#">Radial Gauge</a>           <br>
+                       GAUGES                                             <br>
+                       <a href="#">Linear Gauge</a>                       <br>
+                       <a href="#">Radial Gauge</a>                       <br>
                    </div>
 
                    <div class="col-xs-12 col-sm-2">
-                       BARCODES                               <br>
-                       <a href="#">Barcode</a>                <br>
-                       <a href="#">QR Code</a>                <br>
+                       BARCODES                                           <br>
+                       <a href="#">Barcode</a>                            <br>
+                       <a href="#">QR Code</a>                            <br>
                        <br>
-                       DIAGRAMS & MAPS                        <br>
-                       <a href="#">Diagram</a>                <br>
-                       <a href="#">Map</a>                    <br>
+                       DIAGRAMS & MAPS                                    <br>
+                       <a href="#">Diagram</a>                            <br>
+                       <a href="#">Map</a>                                <br>
                        <br>
-                       SCHEDULING                            <br>
-                       <a href="#">Calendar</a>              <br>
-                       <a href="#">Gantt</a>                 <br>
-                       <a href="#">Scheduler</a>             <br>
-                       <a href="#"></a>                      <br>
+                       SCHEDULING                                         <br>
+                       <a href="#">Calendar</a>                           <br>
+                       <a href="#">Gantt</a>                              <br>
+                       <img src="src/images/orange.png">
+                       <a href="#/scheduler">Scheduler</a>                <br>
+                       <a href="#"></a>                                   <br>
                    </div>
 
                    <div class="col-xs-12 col-sm-2">
-                       LAYOUT                                 <br>
-                       <a href="#">Notification</a>           <br>
-                       <a href="#">Responsive Panel</a>       <br>
-                       <a href="#">Splitter</a>               <br>
-                       <a href="#">Tooltip</a>                <br>
-                       <a href="#">Window</a>                 <br>
+                       LAYOUT                                             <br>
+                       <a href="#">Notification</a>                       <br>
+                       <a href="#">Responsive Panel</a>                   <br>
+                       <a href="#">Splitter</a>                           <br>
+                       <a href="#">Tooltip</a>                            <br>
+                       <a href="#">Window</a>                             <br>
                        <br>
-                       NAVIGATION                             <br>
-                       <a href="#">Button</a>                 <br>
-                       <a href="#">ButtonGroup</a>            <br>
-                       <a href="#">Menu</a>                   <br>
-                       <a href="#">PanelBar</a>               <br>
-                       <a href="#">TabStrip</a>               <br>
-                       <a href="#">ToolBar</a>                <br>
-                       <a href="#">TreeView</a>               <br>
+                       NAVIGATION                                         <br>
+                       <img src="src/images/green.png">
+                       <a href="#/button">Button</a>                      <br>
+                       <a href="#">ButtonGroup</a>                        <br>
+                       <a href="#">Menu</a>                               <br>
+                       <a href="#">PanelBar</a>                           <br>
+                       <img src="src/images/orange.png">
+                       <a href="#/tabstrip">TabStrip</a>                  <br>
+                       <img src="src/images/orange.png">
+                       <a href="#/toolbar">ToolBar</a>                    <br>
+                       <a href="#">TreeView</a>                           <br>
                    </div>
                 </div>
+
+                <br>
+                <br>
+                <br>
             </div>
         </div>
 
