refactor(sample): move images/styles folders

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -22,13 +22,13 @@
                 <!-- Row 1, tab page 1 - 3 columns (images) -->
                 <div class="row">
                     <div class="col-xs-12 col-sm-4">
-                        <img src="src/images/aurelia-logo-04.png" >
+                        <img src="images/aurelia-logo-04.png" >
                     </div>
                    <div class="col-xs-12 col-sm-4">
-                        <img src="src/images/bridge-image-08-low.png" >
+                        <img src="images/bridge-image-08-low.png" >
                     </div>
                     <div class="col-xs-12 col-sm-4">
-                        <img src="src/images/kendo-logo-05.png" >
+                        <img src="images/kendo-logo-05.png" >
                     </div>
                 </div>
 
@@ -78,10 +78,10 @@
                     <div class="col-xs-12 col-sm-12">
                         <p>
                             <span style="font-size:18px">
-                                <img src="src/images/green.png">
+                                <img src="images/green.png">
                                 Implemented controls
                                 &nbsp; &nbsp;
-                                <img src="src/images/orange.png">
+                                <img src="images/orange.png">
                                 controls under development
                             </span>
                         </p>
@@ -94,14 +94,14 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-2">
                         MOST POPULAR                                      <br>
-                        <img src="src/images/orange.png">
+                        <img src="images/orange.png">
                         <a href="#/grid">Grid</a>                         <br>
                         <a href="#">Editor</a>                            <br>
                         <a href="#">Scheduler</a>                         <br>
                         <a href="#">Bar Charts</a>                        <br>
                         <a href="#">Line Charts</a>                       <br>
                         <a href="#">Stock Charts</a>                      <br>
-                        <img src="src/images/orange.png">
+                        <img src="images/orange.png">
                         <a href="#/dropdownlist">DropDownList</a>         <br>
                         <a href="#">Window</a>                            <br>
                         <a href="#">Upload</a>                            <br>
@@ -110,7 +110,7 @@
 
                    <div class="col-xs-12 col-sm-2">
                         DATA MANAGEMENT                                   <br>
-                        <img src="src/images/orange.png">
+                        <img src="images/orange.png">
                         <a href="#/grid">Grid</a>                         <br>
                         <a href="#">Spreadsheet</a>                       <br>
                         <a href="#">Listview</a>                          <br>
@@ -119,14 +119,14 @@
                         <a href="#">ScrollView</a>                        <br>
                         <br>
                         EDITORS                                           <br>
-                        <img src="src/images/green.png">
+                        <img src="images/green.png">
                         <a href="#/autocomplete">Autocomplete</a>         <br>
                         <a href="#">ColorPicker</a>                       <br>
-                        <img src="src/images/orange.png">
+                        <img src="images/orange.png">
                         <a href="#combobox">Combobox</a>                  <br>
                         <a href="#">DatePicker</a>                        <br>
                         <a href="#">DateTimePicker</a>                    <br>
-                        <img src="src/images/orange.png">
+                        <img src="images/orange.png">
                         <a href="#/dropdownlist">DropDownList</a>         <br>
                         <a href="#">Editor</a>                            <br>
                         <a href="#">MaskedTextBox</a>                     <br>
@@ -175,7 +175,7 @@
                        SCHEDULING                                         <br>
                        <a href="#">Calendar</a>                           <br>
                        <a href="#">Gantt</a>                              <br>
-                       <img src="src/images/orange.png">
+                       <img src="images/orange.png">
                        <a href="#/scheduler">Scheduler</a>                <br>
                        <a href="#"></a>                                   <br>
                    </div>
@@ -189,14 +189,14 @@
                        <a href="#">Window</a>                             <br>
                        <br>
                        NAVIGATION                                         <br>
-                       <img src="src/images/green.png">
+                       <img src="images/green.png">
                        <a href="#/button">Button</a>                      <br>
                        <a href="#">ButtonGroup</a>                        <br>
                        <a href="#">Menu</a>                               <br>
                        <a href="#">PanelBar</a>                           <br>
-                       <img src="src/images/orange.png">
+                       <img src="images/orange.png">
                        <a href="#/tabstrip">TabStrip</a>                  <br>
-                       <img src="src/images/orange.png">
+                       <img src="images/orange.png">
                        <a href="#/toolbar">ToolBar</a>                    <br>
                        <a href="#">TreeView</a>                           <br>
                    </div>
