--- a/sample/src/button/api.html
+++ b/sample/src/button/api.html
@@ -17,7 +17,7 @@
                 <div>
                     <textarea au-markdown>
 ```
-<button au-kendo-button enable.bind="enabled" class="k-primary" click.delegate="test()">Click me</button>
+<button au-kendo-button="enable.bind: enabled" class="k-primary" click.delegate="test()">Click me</button>
 ```
                     </textarea>
                 </div>
