improved grid a little

--- a/sample/index.html
+++ b/sample/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
-    <script src="vendors/src/jquery.min.js"></script>
+    <script src="vendors/js/jquery.min.js"></script>
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
 
