--- a/sample/src/grid/html-config.html
+++ b/sample/src/grid/html-config.html
@@ -1,4 +1,30 @@
 <template>
-    <au-kendo-grid>
-	</au-kendo-grid>
+    <section>
+        <collapse-panel title="HTML Config" allow-collapse.bind="false">
+
+        </collapse-panel>
+
+        <collapse-panel title="Code Preview">
+            <div au-kendo-tabstrip>
+                <ul>
+                    <li class="k-state-active">HTML</li>
+                    <li>Code</li>
+                </ul>
+                <div>
+                    <textarea au-markdown>
+```
+```
+                    </textarea>
+                </div>
+                <div>
+                    <textarea au-markdown>
+```
+
+```
+                    </textarea>
+                </div>
+            </div>
+        </collapse-panel>
+    </section>
 </template>
+
